website/css/styles-pink.css
/* ... */
/* Small devices (768px and down) */
@media (max-width: 768px) {
  /* 5. Teaser Slider 768px
  -------------------------------------*/
  .teaser-slider .item {
    height: 430px;
  }
  .teaser-slider-ph {
    height: 425px;
  }
  /* 7. Features 768px
  -------------------------------------*/
  .features h2 {
    font-size: 28px;
  }
  /* 8. Room Tabs 768px
  -------------------------------------*/
  .room-tabs h2 {
    font-size: 24px;
  }
  .room-tabs .nav-tabs {
    font-size: 14px;
  }
  .room-tabs .room-tabs-description h3 {
    font-size: 18px;
  }
  .room-tabs .room-tabs-checklist {
    margin-bottom: 0;
    margin-top: 0;
  }
  .room-tabs .room-tabs-checklist li {
    background-color: #f7e7eb;
    margin-bottom: 2px;
  }
  .room-tabs .room-tabs-checklist.left {
    text-align: center;
  }
  .room-tabs .room-tabs-checklist.left li i {
    float: none;
    display: none;
  }
  .room-tabs .room-tabs-checklist.right {
    text-align: center;
  }
  .room-tabs .room-tabs-checklist.right li i {
    float: none;
    display: none;
  }
  /* 9. Location 768px
  -------------------------------------*/
  .location .location-address {
    font-size: 16px;
    height: 60px;
    margin-top: -60px;
  }
  .location .location-address i {
    font-size: 17px;
  }
  /* 10. Attractions 768px
  -------------------------------------*/
  .attractions h2 {
    font-size: 28px;
  }
  .attractions p {
    font-size: 14px;
    line-height: 26px;
  }
  /* 11. Newsletter 768px
  -------------------------------------*/
  .newsletter .newsletter-box {
    padding: 85px 15px 70px;
  }
  .newsletter .newsletter-box h3 {
    font-size: 16px;
    line-height: 30px;
  }
  .newsletter .newsletter-box .input-group {
    margin: 0 20px 20px 20px;
  }
  /* 12. Reviews 768px
  -------------------------------------*/
  .reviews h2 {
    font-size: 24px;
  }
  /* 13. About
  -------------------------------------*/
  .about h2 {
    font-size: 24px;
  }
  .about p {
    font-size: 14px;
    line-height: 26px;
  }
  /* 14. Counter 768px
  -------------------------------------*/
  .counter .counter-box {
    margin-bottom: 35px;
  }
  /* 15. Rates 768px
-------------------------------------*/
  .rates h2 {
    font-size: 28px;
  }
  .rates .rates-payment-info img {
    margin-top: 0;
  }
  /* 16. Services 768px
  -------------------------------------*/
  .services h2 {
    font-size: 28px;
  }
  /* 17. Content 768px
  -------------------------------------*/
  .content h2 {
    font-size: 24px;
  }
  .content h3 {
    font-size: 18px;
  }
  /* 19. Contact 768px
  -------------------------------------*/
  .contact h2 {
    font-size: 28px;
  }
  .contact h3 {
    font-size: 16px;
  }
  .contact .input-group.textbox textarea {
    width: 85%;
  }
  /* 20. Address 768px
  -------------------------------------*/
  .address address {
    font-size: 16px;
  }
  .address .address-info {
    font-size: 16px;
    line-height: 26px;
  }
  .address .phones {
    font-size: 18px;
    margin-top: 25px;
  }
  .address .phones li {
    margin-bottom: 5px;
  }
  .address .phones li i {
    font-size: 36px;
    vertical-align: sub;
    margin-right: 7px;
  }
  /* 23. Inquiry Modal 768px
  -------------------------------------*/
  .modal {
    padding: 0 !important;
    margin: 0 !important;
  }
  #inquiryModal .modal-dialog {
    width: 100%;
    margin: 0;
  }
  #inquiryModal .modal-dialog .modal-content {
    border: 0;
  }
  #inquiryModal .modal-dialog .modal-content .modal-header {
    text-align: left;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body {
    text-align: left;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .room-and-date .date-select {
    float: none;
    width: 100%;
    padding-right: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .room-and-date .time-select {
    float: none;
    width: 100%;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .room-and-date .people-select {
    float: none;
    width: 100%;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .first-name-group {
    float: none;
    width: 100%;
    padding-right: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .last-name-group {
    float: none;
    width: 100%;
    padding-left: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .zip-code-group {
    float: none;
    width: 100%;
    padding-right: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .city-group {
    float: none;
    width: 100%;
    padding-left: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .phone-group {
    float: none;
    width: 100%;
    padding-right: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-body .personal-information .email-group {
    float: none;
    width: 100%;
    padding-left: 0px;
  }
  #inquiryModal .modal-dialog .modal-content .modal-footer .inquiry-info {
    float: none;
    padding-left: 0px;
    text-align: center;
  }
  #inquiryModal .modal-dialog .modal-content .modal-footer .btn-inquiry-submit {
    float: none;
    width: 100%;
    text-align: center;
  }
}
/* ... */

